--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <label for="colorCount">Number of Colors (2-7):</label>
         <input type="number" id="colorCount" min="2" max="7" value="5">
         <button id="generate">Generate Palette</button>
+        <button id="export">Export as SVG</button>
     </div>
     <div class="palette" id="palette"></div>
 
